--- a/HajosTeszt/HajosTeszt/HajosTeszt.csproj
+++ b/HajosTeszt/HajosTeszt/HajosTeszt.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.SqlServer" Version="5.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.Tools" Version="5.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
